<resources>
    <string name="app_name">Connection Manager</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Connection Manager</string>
    <string name="start_service">Start</string>
    <string name="stop_service">Stop</string>
    <string name="audio_tab">AUDIO</string>
    <string name="midi_tab">MIDI</string>
    <string name="connect_button">Connect</string>
    <string name="disconn_all_button">Disconnect All</string>
    <string name="input_label">Source Port : </string>
    <string name="output_label">Destination Port : </string>
    <string name="inputlist_label">Source Port List</string>
    <string name="outputlist_label">Destination Port List</string>
    <string name="connected_label">Connected List </string>        
    <string name="getconn_button">Get Connection List </string>
    <string name="toggle_button">Toggle Button</string>
    <string name="sync_start">Sync Start</string>
    <string name="sync_stop">Sync Stop</string>
    <string name="set_position">Set Position</string>
</resources>