<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:gravity="center" >

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="vertical" >

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="horizontal" >

			<Button
				android:id="@+id/sync_start"
				style="?android:attr/buttonStyleSmall"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/sync_start" />

			<Button
				android:id="@+id/sync_stop"
				style="?android:attr/buttonStyleSmall"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/sync_stop" />

			<Button
				android:id="@+id/set_position"
				style="?android:attr/buttonStyleSmall"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/set_position" />

		</LinearLayout>

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="horizontal" >

			<Spinner
			    android:id="@+id/latency_spinner"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_weight="1" />

			<ToggleButton
				android:id="@+id/service_button"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/toggle_button"
				android:textOff="@string/start_service"
				android:textOn="@string/stop_service" />

<!-- 			<TextView -->
<!-- 				android:id="@+id/connected_label" -->
<!-- 				android:layout_width="wrap_content" -->
<!-- 				android:layout_height="wrap_content" -->
<!-- 				android:textSize="30sp" /> -->

			<Button
				android:id="@+id/audio_tab_button"
				style="?android:attr/buttonStyleSmall"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/audio_tab" />

			<Button
				android:id="@+id/midi_tab_button"
				style="?android:attr/buttonStyleSmall"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/midi_tab" />

			<Button
				android:id="@+id/connect_button"
				style="?android:attr/buttonStyleSmall"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/connect_button" />

		</LinearLayout>

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="horizontal" >

			<TextView
				android:id="@+id/input_label"
				android:layout_width="160dp"
				android:layout_height="20dp"
				android:text="@string/input_label" />

			<TextView
				android:id="@+id/out_label"
				android:layout_width="160dp"
				android:layout_height="20dp"
				android:text="@string/output_label" />

		</LinearLayout>

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="horizontal" >

			<TextView
				android:id="@+id/inputport_text"
				android:layout_width="160dp"
				android:layout_height="20dp" />

			<TextView
			android:id="@+id/outputport_text"
			android:layout_width="160dp"
			android:layout_height="20dp" />

		</LinearLayout>

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="horizontal" >

			<ListView
				android:id="@+id/inputPort_listView"
				android:layout_width="160dp"
				android:layout_height="140dp" >
			</ListView>

			<ListView
				android:id="@+id/outputPort_listView"
				android:layout_width="160dp"
				android:layout_height="140dp" >
			</ListView>

		</LinearLayout>

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="horizontal" >

			<Button
				android:id="@+id/getconn_button"
				style="?android:attr/buttonStyleSmall"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/getconn_button" />

			<Button
				android:id="@+id/disconn_button"
				style="?android:attr/buttonStyleSmall"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/disconn_all_button" />

		</LinearLayout>

<!-- 		<LinearLayout -->
<!-- 			android:layout_width="wrap_content" -->
<!-- 			android:layout_height="wrap_content" -->
<!-- 			android:orientation="horizontal" > -->

<!-- 			<TextView -->
<!-- 				android:id="@+id/inputlist_label" -->
<!-- 				android:layout_width="wrap_content" -->
<!-- 				android:layout_height="wrap_content" -->
<!-- 				android:textSize="30sp" /> -->

<!-- 			<TextView -->
<!-- 				android:id="@+id/outputlist_label" -->
<!-- 				android:layout_width="wrap_content" -->
<!-- 				android:layout_height="wrap_content" -->
<!-- 				android:textSize="30sp" /> -->

<!-- 		</LinearLayout> -->

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="horizontal" >

			<ListView
				android:id="@+id/connected_ListView"
				android:layout_width="320dp"
				android:layout_height="140dp" >
			</ListView>

		</LinearLayout>

	</LinearLayout>

</LinearLayout>
